--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -10,6 +10,7 @@
     align-items: center;
     border-radius: 25px;
     font-weight: bold;
+    border: none;
 }
 .button:hover,
 .button:active{
@@ -18,7 +19,7 @@
 .icon{
     width: 1.35rem;
     height: 1.35rem;
-    margin-right: 0.5rem;
+    margin-right: 1rem;
     color: white;
 }
 .badge{
