--- a/src/components/Cart/Modal.module.css
+++ b/src/components/Cart/Modal.module.css
@@ -10,9 +10,11 @@
   
   .modal {
     position: fixed;
-    top: 20vh;
-    left: 10%;
-    width: 80%;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
     background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     z-index: 100;
