--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,4 +1,27 @@
-.header{
+/* Styles for screens with width less than 768px */
+@media (max-width: 767px) {
+    .header {
+      padding: 0 5%;
+    }
+  
+    .main-image img {
+      transform: rotateZ(-5deg) translateY(-2rem) translateX(-1rem);
+    }
+  }
+  
+  /* Styles for screens with width between 768px and 1024px */
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .header {
+      padding: 0 8%;
+    }
+  
+    .main-image img {
+      transform: rotateZ(-5deg) translateY(-3rem) translateX(-1rem);
+    }
+  }
+  
+  /* Default styles for larger screens */
+  .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -12,16 +35,19 @@
     padding: 0 10%;
     z-index: 10;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-}
-.main-image{
+  }
+  
+  .main-image {
     width: 100%;
-    height:25rem;
+    height: 25rem;
     z-index: 0;
     overflow: hidden;
-}
-.main-image img{
+  }
+  
+  .main-image img {
     width: 110%;
     height: 100%;
     object-fit: cover;
     transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-}
+  }
+  
